<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menugroup1" >
        <item
            android:id="@+id/menu1"
            android:icon="@drawable/mushroom"

            android:title="@string/menu1"/>
        <item
            android:id="@+id/menu2"
            android:title="@string/menu2"/>
        <item
            android:id="@+id/menu3"
            android:title="@string/menu3">
            <menu>
                <item
                    android:id="@+id/submenu1"
                    android:title="@string/sub_menu1"/>
            </menu>
        </item>
    </group>
    <group android:id="@+id/menugroup2">
        <item
            android:id="@+id/menu4"
            android:checkable="true"
            android:checked="false"
            android:title="@string/menu4"/>
        <item
            android:id="@+id/menu5"
            android:title="@string/menu5"
            android:enabled="false"/>
        <item
            android:id="@+id/menu6"
            android:title="@string/menu6"/>
    </group>

</menu>